--- a/hvd.html
+++ b/hvd.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Valentines Day</title>
-    <link rel="stylesheet" href="hvd.css">
+    <link rel="stylesheet" href="hvd1.css">
 </head>
 <body>
     <div class="envelope">
@@ -25,6 +25,6 @@
         <p id="max">I Love you My Jaan! &#9829</p>
       </div>
     </div>
-    <script src="hvd.js"></script>
+    <script src="hvd1.js"></script>
 </body>
 </html>
